objects/redwing__Training_Plan_Section_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Community_Id__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Completed_On__c</fullName>
        <inlineHelpText>Date this assignment was completed</inlineHelpText>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redwing__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Plan Assignment</label>
        <referenceTo>redwing__Training_Plan_Assignment__c</referenceTo>
        <relationshipLabel>Learning Plan Section Assignments</relationshipLabel>
        <relationshipName>Training_Plan_Section_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Learning Plan Section</label>
        <referenceTo>redwing__Training_Plan_Section__c</referenceTo>
        <relationshipLabel>Learning Plan Section Assignments</relationshipLabel>
        <relationshipName>Training_Plan_Section_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Plan_Section_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Plan Section Assignment</label>
    <nameField>
        <displayFormat>LPSA-{0000000}</displayFormat>
        <label>Learning Plan Section Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Section Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>